@@ -1,5 +1,12 @@
 $Id$
 
+2014-06-27  Christian Franke  <franke@computer.org>
+
+	Makefile.am: Add update-smart-drivedb.8 target.
+	update-smart-drivedb.8.in: Add copyright and version info.
+	Adjust path names for make target.
+	Add FreeBSD/OpenBSD specific info.
+
 2014-06-27  Hannes von Haugwitz  <hannes@vonhaugwitz.com>
 
 	update-smart-drivedb.8.in: New man page (Debian bug 708433).
